# quit-smoking-bot

./: .cursorrules  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  DOCKER.md  Dockerfile  Dockerfile.monitor  Makefile  PERMISSIONS.md  README.md  bot.py  bot_admins.json  bot_users.json  deploy.sh  dev_setup.py  docker-compose.yml  main.py  manager.py  prize_fund_test.py  pyproject.toml  quotes_history.json  requirements-dev.txt  requirements.txt  setup.py  test_notification_job.py  test_notifications.py
data/: bot_admins.json  bot_users.json  quotes.json
development/: .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  clean-dev.sh  docker-compose.override.yml.example  docker-compose.yml  requirements-test.txt  run-bot-now.sh  start-dev.sh
development/config/: dev-environment.conf  supervisord.conf
development/scripts/: health-monitor.sh  healthcheck.sh  log-aggregator.sh  run-bot-dev.sh  setup-env.sh  test-environment-full.sh  test-environment.sh  test-scripts.sh
development/tests/: test_dev_environment.py
docker/: .dockerignore  Dockerfile  ENTRYPOINT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.py
scripts/: README.md  __init__.py  actions.py  args.py  bootstrap.sh  check-service.sh  common.sh  conflicts.py  docker_utils.py  entrypoint.py  entrypoint.sh  environment.py  errors.py  fix-healthcheck.sh  health-monitor.sh  health.py  health.sh  healthcheck.sh  install-service.sh  monitor.py  output.py  run.sh  service.py  setup-permissions.sh  setup.py  start.py  status.py  stop.py  stop.sh  system.py  test.sh  uninstall-service.sh
scripts/modules/: __init__.py  actions.py  actions.sh  args.py  args.sh  conflicts.py  conflicts.sh  docker.sh  docker_utils.py  environment.py  environment.sh  errors.py  errors.sh  filesystem.sh  health.py  health.sh  output.py  output.sh  service.py  service.sh  system.py  system.sh  testing.sh
src/: __init__.py  bot.py  config.py  quotes.py  send_results.py  status.py  users.py  utils.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_notifications.py
tests/unit/: __init__.py  test_handlers.py  (+2 more)
